--- a/aboutus.html
+++ b/aboutus.html
@@ -10,10 +10,11 @@
     <link rel="shortcut icon" href="Images/1 (55).jpg">
 </head>
 <body>
+   <header>
     <div class="nav-menu">
         <ul>
             <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-            <li class="active"><a href="about.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="aboutus.html">About Us</a></li>
             <li><a href="gallery.html">Gallery</a>
             <div class="sub-menu">
@@ -32,5 +33,6 @@
             <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
         </ul>
     </div>
+</header>
 </body>
 </html>
