--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,8 @@
      <div class="nav-menu">
         <ul>
             <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-            <li class="active"><a href="about.html">About</a></li>
+            <li ><a href="about.html">About</a></li>
+            <li><a href="aboutus.html"> About Us</a></li>
             <li><a href="gallery.html">Gallery</a>
             <div class="sub-menu">
                 <ul>
